--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -48,7 +48,7 @@
 
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
 
-  {{ '//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js' | script_tag }}
+  {{ '//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js' | script_tag }}
 
 </head>
 
@@ -97,7 +97,8 @@
       It would be nice if the logo was a shop setting, rather than a theme setting.
       But for now, it is a theme setting. The shop logo is uploaded on the theme settings page.
       Link to the theme settings page of currently published theme will always be:
-      http://www.shopify.com/admin/themes/current/settings
+      http://www.shopify.com/admin/themes/current/settings. In the theme's files, in your instructions,
+      use a relative link: /admin/themes/current/settings.
       To add theme settings to a theme, see this: http://wiki.shopify.com/Theme_Settings
       Theme settings are added to http://www.shopify.com/admin/themes/current#config/settings.html
       {% endcomment %}
