Use .container instead of #container because we can use several elements on the page with that same width / centering.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,7 +54,7 @@
 
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
 
-  <div id="container">
+  <div class="container">
 
     <header>
       
