--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -38,10 +38,10 @@ margin: 0;
 padding: 0;
 }
 
-/* Adding a bit of padding all around content, for readability */
-
-#container {
-margin: 20px;
+.container {
+width: 960px;
+padding: 20px;
+margin: 0 auto;
 }
 
 /* Override to globally-hosted search.css on the /search page */
