--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,13 +8,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  {% if template == 'index' %}
-  <title>{{ shop.name }} | {{ page_title }}</title>
-  {% elsif template == '404' %}
-  <title>Page Not Found | {{ shop.name }}</title>
-  {% else %}
-  <title>{{ page_title }} | {{ shop.name }}</title>
-  {% endif %}
+  <title>
+    {% if template == 'index' %}{% if page_title contains 'Welcome' %}{{ shop.name }} &ndash; Welcome{% else %}{{ page_title }}{% endif %}{% elsif template == '404' %}Page Not Found{% elsif page_title contains shop.name %}{{ page_title }}{% else %}{{ page_title }} &ndash; {{ shop.name }}{% endif %}
+  </title>
 
   {% if page_description %}
   <meta name="description" content="{{ page_description }}" />
