--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -4,12 +4,18 @@
 {% raw %}
 <!-- Alternatively, if not using a snippet, use the code below. 
 To use the code below, get rid of the above 'include', and get rid of the comment and raw tags, and you're in business. -->
-<ul>
+{% paginate collections by 6 %}
+<h1>Collections</h1>
+<ul class="grid clearfix">
 {% for collection in collections %}
-  {% unless collection.handle == 'all' or collection.handle == 'frontpage' %}
   {% include 'collection-grid-item' with 'three-per-row' %}
-  {% endunless %}
 {% endfor %}
 </ul>
+{% if paginate.pages > 1 %}
+<div id="pagination">
+  {{ paginate | default_pagination }}
+</div>
+{% endif %}
+{% endpaginate %}
 {% endraw %}
 {% endcomment %}
