Add Open Graph tags recommendation as that's so very tricky.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -18,7 +18,9 @@
 
   <link rel="canonical" href="{{ canonical_url }}" />
 
-  <meta name="viewport" content="width=device-width" />  
+  <meta name="viewport" content="width=device-width" />
+  
+  {% include 'open-graph-tags' %}
 
   {{ content_for_header }}
 
