--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,11 +37,9 @@
   
   {% comment %}
   Needed when shopify_common.js is used.
-  We will get rid of that depency: 
-  https://github.com/Shopify/shopify/issues/3732
   {% endcomment %}
   <!--[if lt IE 8]>
-  {{ 'json2.js' | asset_url | script_tag }}
+  {{ 'json2.js' | shopify_asset_url | script_tag }}
   <![endif]-->
 
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
