Update all links that point to old documentation websites like our wiki and Desk.com.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -93,9 +93,8 @@
       It would be nice if the logo was a shop setting, rather than a theme setting.
       But for now, it is a theme setting. The shop logo is uploaded on the theme settings page.
       Link to the theme settings page of currently published theme will always be:
-      http://www.shopify.com/admin/themes/current/settings. In the theme's files, in your instructions,
-      use a relative link: /admin/themes/current/settings.
-      To add theme settings to a theme, see this: http://wiki.shopify.com/Theme_Settings
+      http://www.shopify.com/admin/themes/current/settings.
+      To add theme settings to a theme, see this: http://docs.shopify.com/themes/theme-templates/settings
       Theme settings are added to http://www.shopify.com/admin/themes/current#config/settings.html
       {% endcomment %}
     
@@ -118,10 +117,10 @@
       To create a drop-down menu, the merchant must create a link list that has the same name as the link he wants the drop-down for.
       For example, if he wants a drop-down under a 'Shop by brand' link (say, he has such link in his Main Menu), he needs to create
       a linklist called 'Shop by brand', and populate it with links. Once he has done that, there'll be a drop-down under 'Shop by brand'.
-      Shopify has a visual how-to guide here: http://support.shopify.com/customer/portal/articles/262961.
+      Shopify has a visual how-to guide here: http://docs.shopify.com/manual/your-website/navigation/create-drop-down-menu.
       The naming convention hack won't work well if a shop's navigation uses non-English characters. There's a much more verbose coding solution
-      that can handle non-English characters here: http://wiki.shopify.com/Fix_to_Drop-down_menu_code_to_work_with_non-English_characters.
-      A word on sub-categories: Shopify manages sub-categories using product tags: http://support.shopify.com/customer/portal/articles/75425.
+      that handles non-English characters here: http://docs.shopify.com/support/configuration/store-customization/can-i-have-drop-down-menus-that-use-non-english-characters.
+      A word on sub-categories: Shopify manages sub-categories using product tags: http://docs.shopify.com/manual/configuration/store-customization/subcategories.
       {% endcomment %}
       
       <nav role="navigation">
