--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -30,7 +30,7 @@ floated elements. The code that follows just just shows you how to use a cycle e
 Notice that we named it ( 'clear' ). We need to name it because there's another cycle
 element in this file ( we called that other one 'last' ). If you have more than one
 cycle element in a rendered view, you'll need to name all of them.
-The cycle element is documented here: http://wiki.shopify.com/UsingLiquid#Cycle
+The cycle element is documented here: http://docs.shopify.com/themes/liquid-basics/logic#cycle
 {% endcomment %}
 
 {% if collection-grid-item == 'four-per-row' %}
