--- a/snippets/collection-listing.liquid
+++ b/snippets/collection-listing.liquid
@@ -1,11 +1,12 @@
 {% comment %}
 Be prepared to use this snippet to showcase collections specified in a link list as per this solution here: 
-"Featuring collections using a Link List" http://wiki.shopify.com/Featuring_collections_using_a_Link_List
+"Featuring collections using a Link List" http://docs.shopify.com/support/your-store/collections/featuring-collections-using-link-lists
 If this snippet is called with an argument, we'll assume it is the handle of a link list, and we will use that list.
 If this snippet is not called with an argument, we'll assume we are on the /collections page and will list all collections
-in the shop. All except the 'frontpage' and 'all' collections.
+in the shop, all except the 'frontpage' and 'all' collections.
 Merchants often create an 'all' collection to control their Catalog page at /collections/all as per these instructions:
-"Taking Control of your Catalog Page" http://wiki.shopify.com/Taking_Control_of_your_Catalog_Page
+"Taking Control of your Catalog Page" http://docs.shopify.com/support/your-store/collections/taking-control-of-your-catalog-page
+and don't want that collection to appear on their /collections page.
 {% endcomment %}
 
 {% assign using_link_list = false %}
