--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -24,7 +24,7 @@ Example: the h2 element should have the same size and color in:
 Listing all tags within the current collection.
 Shopify uses product tags to manage subcategories inside collections.
 See 'How do I create subcategories of products?' at 
-http://support.shopify.com/customer/portal/articles/75425 for details.
+http://docs.shopify.com/manual/configuration/store-customization/subcategories for details.
 {% endcomment %}
 {% if collection.all_tags.size > 0 %}
 {% comment %}
