All global assets are on the CDN now.

--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -4,7 +4,7 @@ That search.liquid template is included in the current theme to make it easier f
 to customize your /search page.
 Whether you are using your own template for the search page or not,
 the {{ content_for_header }} tag in theme.liquid will always output the following on the /search page:
-<link rel="stylesheet" href="/global/search.css" type="text/css" />
+<link rel="stylesheet" href="//cdn.shopify.com/s/global/search.css" type="text/css" />
 So the /search page is always styled by a globally-hosted stylesheet called search.css.
 You may override and complement that CSS in your theme's stylesheet.
 We are using a div#searchresults below so that the styles defined in search.css get
