adding foundation and vendor assets

--- a/assets/impact.scss
+++ b/assets/impact.scss
@@ -2,7 +2,7 @@
 @import "variables";
 
 // I gather this file is a starting point for the project.
-@import "bootstrap";
+//@import "bootstrap";
 
 // Include responsive Bootstrap styles
 // @import "bootstrap-responsive";
