general arch changes

--- a/assets/_app.scss
+++ b/assets/_app.scss
@@ -1,3 +1,8 @@
+/* Shopify - Foundation
+by: DesignCollective.io
+https://github.com/sugarskull/shopify-impact-theme
+*/
+
 @import "settings";
 
 //@import "foundation";
