--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1,3 +1,11 @@
+/* Shopify - Foundation
+by: DesignCollective.io
+https://github.com/sugarskull/shopify-impact-theme
+*/
+/* Shopify - Foundation
+by: DesignCollective.io
+https://github.com/sugarskull/shopify-impact-theme
+*/
 /*
 New Syntax, allows to optionally calculate on a different base value to counter compounding effect of rem's.
 Call with 1, 2, 3 or 4 parameters, 'px' is not required but supported:
