--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -3,6 +3,6 @@ by: DesignCollective.io
 https://github.com/sugarskull/shopify-impact-theme
 */
 
-// Import Foundation
+// Import Foundation and Foundation Icons
+@import "foundation-icons";
 @import "app";
-
