--- a/assets/_app.scss
+++ b/assets/_app.scss
@@ -3,8 +3,8 @@ by: DesignCollective.io
 https://github.com/sugarskull/shopify-impact-theme
 */
 
+@import "base";
 @import "settings";
-
 //@import "foundation";
 
 // Or selectively include components
