--- a/snippets/collection-listing.liquid
+++ b/snippets/collection-listing.liquid
@@ -1,42 +1,39 @@
-{% comment %}
-Be prepared to use this snippet to showcase collections specified in a link list as per this solution here: 
-"Featuring collections using a Link List" http://docs.shopify.com/support/your-store/collections/featuring-collections-using-link-lists
-If this snippet is called with an argument, we'll assume it is the handle of a link list, and we will use that list.
-If this snippet is not called with an argument, we'll assume we are on the /collections page and will list all collections
-in the shop, all except the 'frontpage' and 'all' collections.
-Merchants often create an 'all' collection to control their Catalog page at /collections/all as per these instructions:
-"Taking Control of your Catalog Page" http://docs.shopify.com/support/your-store/collections/taking-control-of-your-catalog-page
-and don't want that collection to appear on their /collections page.
-{% endcomment %}
+<div class="large-12 columns">
 
-{% assign using_link_list = false %}
+	<h2>Product Collections TEST</h2>
 
-{% if collection-listing != '' and linklists[collection-listing].handle == collection-listing and linklists[collection-listing].links.size > 0 %}
-  {% assign using_link_list = true %}
-{% endif %}
-
-<h1>{% if using_link_list %}{{ linklists[collection-listing].title }}{% else %}Collections{% endif %}</h1>
-
-{% if using_link_list %}
-<ul class="grid clearfix">
-{% for link in linklists[collection-listing].links %}
-  {% if link.type == 'collection_link' %}
-  {% assign collection = link.object %}
-  {% include 'collection-grid-item' with 'three-per-row' %}
-  {% endif %}
-{% endfor %}
-</ul>
-{% else %}
-{% paginate collections by 6 %}
-<ul class="grid clearfix">
-{% for collection in collections %}
-  {% include 'collection-grid-item' with 'three-per-row' %}
-{% endfor %}
-</ul>
-{% if paginate.pages > 1 %}
-<div id="pagination">
-  {{ paginate | default_pagination }}
+<div class ="row">
+	<div class="product{% if settings.products_per_row == "4" %} large-3 columns{% endif %}{% if settings.products_per_row == "3" %} large-4 columns{% endif %}{% if settings.products_per_row == "2" %} large-6 columns{% endif %}">
+  
+	  <!-- Begin product image -->
+	  <div class="image">
+		<a href="{{ collection.url }}">
+		  {% if collection.image %}
+			<img src="{{ collection.image.src | collection_img_url: 'large' }}" alt="{{ collection.image.alt }}" />
+		  {% else %}
+			<img src="{{ collection.products.first.featured_image | product_img_url: 'large' }}" alt="{{ collection.title | escape  }}" />
+		  {% endif %}
+		</a>
+	  </div>
+	  <!-- End product image -->
+  
+	  <!-- Begin product description -->
+	  <div class="details">
+		<a href="{{ collection.url }}" class="clearfix">
+		  <h4 class="title">{{ collection.title }}</h4>
+		  <span class="price">{{ collection.all_products_count }} {{ collection.all_products_count | pluralize: 'Product', 'Products' }}</span>
+		</a>
+	  </div>
+	  <!-- End product description -->
+  
+	</div>
 </div>
+{% if settings.products_per_row == "4" %}
+{% cycle 'clear-collection-list': '', '', '', '<div style="clear:both;"></div>' %}
 {% endif %}
-{% endpaginate %}
+{% if settings.products_per_row == "3" %}
+{% cycle 'clear-collection-list': '', '', '<div style="clear:both;"></div>' %}
+{% endif %}
+{% if settings.products_per_row == "2" %}
+{% cycle 'clear-collection-list': '', '<div style="clear:both;"></div>' %}
 {% endif %}
