--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -4,7 +4,7 @@ Important notes about pagination:
 - Never paginate by more than 50.
 {% endcomment %}
 
-{% paginate collection.products by 6 %}
+{% paginate collection.products by settings.pagination_limit %}
 
 {% comment %}
 Re-use the 'rte' class wherever you output content that was added by a merchant using
@@ -18,66 +18,104 @@ Example: the h2 element should have the same size and color in:
 - blog post
 {% endcomment %}
 
-<h1>{{ collection.title }}</h1>
+<div class="large-12 columns">
+  
+	<div class="row">
+      
+		<div class="large-12 columns">
 
-{% comment %}
-Listing all tags within the current collection.
-Shopify uses product tags to manage subcategories inside collections.
-See 'How do I create subcategories of products?' at 
-http://docs.shopify.com/manual/configuration/store-customization/subcategories for details.
-{% endcomment %}
-{% if collection.all_tags.size > 0 %}
-{% comment %}
-Alas, the collection title is escaped, while vendor and type aren't,
-so in comparisons we need to escape type and vendor.
-{% endcomment %}
-{% assign type_escaped = collection.products.first.type | escape %}
-{% assign vendor_escaped = collection.products.first.vendor | escape %}
-<ul class="collection-sub-categories clearfix">
-  <li{% unless current_tags %} class="active"{% endunless %}>
-    {% if collection.handle %}
-    {% comment %}Good for /collections/all collection and regular collections{% endcomment %}
-    <a href="/collections/{{ collection.handle }}">All</a>
-    {% comment %}Good for automatic type collections{% endcomment %}
-    {% elsif type_escaped == collection.title %}
-    <a href="{{ collection.products.first.type | url_for_type }}">All</a>
-    {% comment %}Good for automatic vendor collections{% endcomment %}
-    {% elsif vendor_escaped == collection.title %}
-    <a href="{{ collection.products.first.vendor | url_for_vendor }}">All</a>
-    {% endif %}
-  </li> 
-  {% for tag in collection.all_tags %}
-  {% if current_tags contains tag %}
-  <li class="active">
-    {{ tag | link_to_remove_tag: tag }}
-  </li>
-  {% else %}
-  <li>
-    {{ tag | link_to_tag: tag }}
-  </li>
-  {% endif %}
-  {% endfor %}  
-</ul>
-{% endif %}
-
-{% if collection.description.size > 0 %}
-<div class="rte">
-  {{ collection.description }}
+            <h1>{{ collection.title }}</h1>
+          
+      	</div>
+      
+      	<div class="large-12 columns">
+        
+            {% comment %}
+            Listing all tags within the current collection.
+            Shopify uses product tags to manage subcategories inside collections.
+            See 'How do I create subcategories of products?' at 
+            http://support.shopify.com/customer/portal/articles/75425 for details.
+            {% endcomment %}
+            {% if collection.all_tags.size > 0 %}
+            <ul class="collection-sub-categories clearfix">
+              <li{% unless current_tags %} class="active"{% endunless %}>
+                {% if collection.handle %}
+                {% comment %}Good for /collections/all collection and regular collections{% endcomment %}
+                <a href="/collections/{{ collection.handle }}">All</a>
+                {% comment %}Good for automatic type collections{% endcomment %}
+                {% elsif collection.products.first.type == collection.title %}
+                <a href="{{ collection.title | url_for_type }}">All</a>
+                {% comment %}Good for automatic vendor collections{% endcomment %}
+                {% elsif collection.products.first.vendor == collection.title %}
+                <a href="{{ collection.title | url_for_vendor }}">All</a>
+                {% endif %}
+              </li> 
+              {% for tag in collection.all_tags %}
+              {% if current_tags contains tag %}
+              <li class="active">
+                {{ tag | link_to_remove_tag: tag }}
+              </li>
+              {% else %}
+              <li>
+                {{ tag | link_to_tag: tag }}
+              </li>
+              {% endif %}
+              {% endfor %}  
+            </ul>
+            {% endif %}
+        
+            {% if collection.description.size > 0 %}
+            <div class="rte">
+              {{ collection.description }}
+            </div>
+            {% endif %}
+          
+      </div>
+          
+    </div>
+    
+    <div class="row">
+        {% for product in collection.products %}
+            {% include 'product-loop' %}
+        {% else %}
+            <div class="large-12 columns">
+                <p>There are no products in this view.</p>
+            </div>
+        {% endfor %}
+    </div>
+  
+  	<div class="row">
+      
+      	<div class="large-12 columns">
+        
+            {% if paginate.pages > 1 %}
+                <div class="pagination-centered">
+                    <ul class="pagination">
+                        <li class="arrow">
+                            {% if paginate.previous %}
+                                {{ paginate.previous.title | link_to: paginate.previous.url }}
+                            {% endif %}
+                        </li>
+                        {% for part in paginate.parts %}
+                            {% if part.is_link %}
+                                <li>{{ part.title | link_to: part.url }}</li>
+                            {% else %}
+                                <li class="current"><a href>{{ part.title }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        <li class="arrow">
+                            {% if paginate.next %}
+                                {{ paginate.next.title | link_to: paginate.next.url }}
+                            {% endif %}
+                        </li>
+                    </ul>
+                </div>
+            {% endif %}
+          
+      	</div>
+      
+  	</div>
+	
 </div>
-{% endif %}
-
-<ul class="grid clearfix">
-{% for product in collection.products %}
-  {% include 'product-grid-item' with 'three-per-row' %}
-{% else %}
-<p>There are no products in this view.</p>
-{% endfor %}
-</ul>
-
-{% if paginate.pages > 1 %}
-<div id="pagination">
-  {{ paginate | default_pagination }}
-</div>
-{% endif %}
 
 {% endpaginate %}
