--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -10,7 +10,9 @@ Example: the h2 element should have the same size and color in:
 - blog post
 {% endcomment %}
 
-<h1>{{ page.title }}</h1>
-<div class="rte">
-  {{ page.content }}
+<div class="large-12 columns" id="pagination">
+	<h1>{{ page.title }}</h1>
+	<div class="rte">
+	  {{ page.content }}
+	</div>
 </div>
