--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,172 +1,181 @@
-<div itemscope itemtype="http://schema.org/Product">
+<div itemscope itemtype="http://schema.org/Product" id="product-details">
   
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}" />
   <meta itemprop="image" content="{{ product.featured_image.src | product_img_url: 'grande' }}" />
   
   <form action="/cart/add" method="post" enctype="multipart/form-data">
-    
-    <div id="product-details">
+  
+		<div class="large-12 columns">
       
-      <h1 itemprop="name">{{ product.title }}</h1>
-      {% assign product_vendor_handle = product.vendor | handle %}
-      {% comment %}
-      Do we have a collection that has the same name as our product vendor name?
-      If we do, let's have the vendor link point to it.
-      If not, we will point to the automatic vendor collection.
-      {% endcomment %}
-      {% if collections[product_vendor_handle].handle == product_vendor_handle %}
-        {% assign vendor_url = collections[product_vendor_handle].url %}
-      {% else %}
-        {% assign vendor_url = product.vendor | url_for_vendor %}
-      {% endif %}
-      <h2 itemprop="brand">{{ product.vendor | link_to: vendor_url }}</h2>
+		  <hgroup id="product-title">
+			<h1 itemprop="name">{{ product.title }}</h1>
+			{% assign product_vendor_handle = product.vendor | handle %}
+			{% comment %}
+			Do we have a collection that has the same name as our product vendor name?
+			If we do, let's have the vendor link point to it.
+			If not, we will point to the automatic vendor collection.
+			{% endcomment %}
+			{% if collections[product_vendor_handle].handle == product_vendor_handle %}
+			  {% assign vendor_url = collections[product_vendor_handle].url %}
+			{% else %}
+			  {% assign vendor_url = product.vendor | url_for_vendor %}
+			{% endif %}
+		  </hgroup>
+		  
+		</div>
       
-      <div id="product-description" class="rte" itemprop="description">
-        {{ product.description }}
-      </div>
-      
-      {% comment %}
-      All themes by Shopify should support the Grapevine Reviews app out of the box.
-      https://apps.shopify.com/grapevine-reviews
-      {% endcomment %} 
-      <div id="shopify-product-reviews" data-id="{{ product.id }}">{{ product.metafields.spr.reviews }}</div>
-      
-      <div id="product-price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-        <meta itemprop="priceCurrency" content="{{ shop.currency }}" />
-        {% if product.available %}
-        <link itemprop="availability" href="http://schema.org/InStock" />
-        {% else %}
-        <link itemprop="availability" href="http://schema.org/OutOfStock" />
-        {% endif %}
-        <p>
-          {% if product.compare_at_price > product.price %}
-          <span class="product-price on-sale" itemprop="price">{{ product.price | money }}</span>&nbsp;<s class="product-compare-price">{{ product.compare_at_price_max | money }}</s>
-          {% else %}
-          <span class="product-price" itemprop="price">{{ product.price | money }}</span>
-          {% endif %}
-        </p>
-      </div>
-      
-      {% assign hide_default_title = false %}
-      {% if product.variants.size == 1 and product.variants.first.title contains 'Default' %}
-        {% assign hide_default_title = true %}
-      {% endif %}       
+		<!-- #product-photos -->
+		
+			  <!-- for product image zoom - use the #id sets here for different behaviour-->
+				<script>
+					$(document).ready(function(){
+						$('#zoom').zoom();
+						$('#grab').zoom({ on:'grab' });
+						$('#click').zoom({ on:'click' });			 
+						$('#toggle').zoom({ on:'toggle' });
+					});
+				</script>
+				
+		<div class="large-6 columns" id="product-photos">
+  
+		  {% if product.images.size == 0 %}
 
-      <div id="product-variants" class="{% if hide_default_title %} hidden{% endif %}">
-       <select id="product-select" name="id" class="hidden">
-       {% for variant in product.variants %}
-         <option value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money }}</option>
-       {% endfor %}
-       </select>
-      </div>        
-             
-      <div id="backorder" class="hidden">
-        <p>{{ '%s is back-ordered. We will ship it separately in 10 to 15 days.' | replace: '%s', '<span id="selected-variant"></span>' }}</p>
-      </div>
-        
-      <div id="product-add">
-        <input type="submit" name="add" id="add" value="Add to cart">
-      </div>
+			<div id="zoom">
+				<img src="{{ product.featured_image | product_img_url: 'master' }}" alt="{{ product.featured_image.alt | escape }}" id="product_feature_image" />
+			</div>
+	
+		  {% else %}
+	
+			<div id="zoom">
+				<img src="{{ product.featured_image.src | product_img_url: 'master' }}" alt="{{ product.featured_image.alt | escape }}" id="product_feature_image" />
+			</div>
+
+			{% if product.images.size > 1 %}
+			<br />
+			<ul class="clearing-thumbs" data-clearing style="position:relative;">
+			  {% for image in product.images offset:1 %}
+			  <li>
+				<a href="#" data-reveal-id="myModal{{ image.id }}">
+				  <img src="{{ image.src | product_img_url: 'compact' }}" alt="{{ image.alt | escape }}" />
+				</a>
+			  </li>
+			  <div id="myModal{{ image.id }}" class="reveal-modal expand" style="position:fixed;">
+			  		<img src="{{ image.src | product_img_url: 'master' }}" alt="{{ image.alt | escape }}" />
+			  		<a class="close-reveal-modal">&#215;</a>
+			  </div>
+			  {% endfor %}
+			</ul>
+			{% endif %}
+	
+		  {% endif %}
+
+		</div>
+		<!-- End #product-photos -->
       
-      {% if collection %}
-        {% if collection.previous_product or collection.next_product %}
-        <div>     
-        {% if collection.previous_product %}
-          {% capture prev_url %}{{ collection.previous_product}}#content{% endcapture %}
-          <span class="left">{{ '&larr; Previous Product' | link_to: prev_url }}</span>
-        {% endif %}
-        {% if collection.next_product %}
-          {% capture next_url %}{{ collection.next_product}}#content{% endcapture %}
-          <span class="right">{{ 'Next Product &rarr;' | link_to: next_url }}</span>
-        {% endif %}
-        </div>
-        {% endif %}
-      {% endif %}
+		<!-- #product-details -->
+		<div class="large-6 columns" id="product-detials">
       
-    </div><!-- #product-details -->
+            <div id="product-description" class="rte" itemprop="description">
+                <p>{{ product.description }}</p>
+            </div>
+          
+            <div id="product-price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                    <meta itemprop="priceCurrency" content="{{ shop.currency }}" />
+                    {% if product.available %}
+                    <link itemprop="availability" href="http://schema.org/InStock" />
+                    {% else %}
+                    <link itemprop="availability" href="http://schema.org/OutOfStock" />
+                    {% endif %}
+                    <h5>
+                        {% if product.compare_at_price > product.price %}
+                        <span class="price" itemprop="price">{{ product.price | money }}</span>&nbsp;<s class="sale-price">{{ product.compare_at_price_max | money }}</s>
+                        {% else %}
+                        <span class="price" itemprop="price">{{ product.price | money }}</span>
+                        {% endif %}
+                    </h5>
+            </div>
+            
+            <h5 itemprop="brand">{{ product.vendor | link_to: vendor_url }}</h5>
+          
+            {% assign hide_default_title = false %}
+            {% if product.variants.size == 1 and product.variants.first.title contains 'Default' %}
+                {% assign hide_default_title = true %}
+            {% endif %}       
+    
+            <div id="product-variants" class="{% if hide_default_title %} hidden{% endif %}">
+                <select id="product-select" name="id" class="hidden">
+                {% for variant in product.variants %}
+                    <option value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money }}</option>
+                {% endfor %}
+                </select>
+            </div>        
+                 
+            <!-- <div id="backorder" class="hidden">
+                <p>{{ '%s is back-ordered. We will ship it separately in 10 to 15 days.' | replace: '%s', '<span id="selected-variant"></span>' }}</p>
+            </div> -->
+            
+            <div id="product-add">
+                <input class="button" type="submit" name="add" id="add" value="Add to cart">
+            </div>
+      
+		</div>
+		<!-- END #product-details -->
+    
+    	{% include 'share' %}
+    
+		
+		{% if settings.related-products %}
+			<div class="large-12 columns">
+				<!-- Related Products -->
+					{% include 'related-products' %}
+				<!-- End Related Products -->
+			</div>
+		{% endif %}
 
   </form>
-  
-  <div id="product-photos">
-  
-  {% if product.images.size == 0 %}
-  
-    <div id="product-photo-container">
-      <img src="{{ '' | product_img_url: 'grande' }}" alt="" />
-    </div>
-    
-  {% else %}
-    
-    <div id="product-photo-container">
-      <a class="gallery" href="{{ product.featured_image.src | product_img_url: 'original' }}" rel="gallery">
-        <img src="{{ product.featured_image.src | product_img_url: 'grande' }}" alt="{{ product.featured_image.alt | escape }}" />
-      </a>
-    </div>
-
-    {% if product.images.size > 1 %}
-    <ul id="product-photo-thumbs" class="clearfix grid">
-      {% for image in product.images offset:1 %}
-      <li class="product-photo-thumb">
-        <a class="gallery" href="{{ image.src | product_img_url: 'original' }}" rel="gallery">
-          <img src="{{ image.src | product_img_url: 'compact' }}" alt="{{ image.alt | escape }}" />
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    
-  {% endif %}
-
-  </div><!-- #product-photos -->
 
 </div>
 
-{% comment %}
-Adding support for product options. See here for details: http://docs.shopify.com/support/your-website/themes/can-i-make-my-theme-use-products-with-multiple-options
-{% endcomment %}
-
 <script>
+jQuery(function($) {
   
-var selectCallback = function(variant, selector) {
+  var selectCallback = function(variant, selector) {
 
-  if (variant) {
-    
-    // Selected a valid variant that is available.
-    if (variant.available) {
-          
-      // Enabling add to cart button.
-      jQuery('#add').removeClass('disabled').removeAttr('disabled').val('Add to Cart').fadeTo(200,1);
-    
-      // If item is backordered yet can still be ordered, we'll show special message.
-      if (variant.inventory_management && variant.inventory_quantity <= 0) {
-        jQuery('#selected-variant').html({{ product.title | json }}{% unless hide_default_title %} + ' - ' + variant.title{% endunless %});
-        jQuery('#backorder').removeClass("hidden");
+    if (variant) {
+      
+      if (variant.available) {
+        
+        // Selected a valid variant that is available.
+        $('#add').removeClass('disabled').removeAttr('disabled').val('Add to Cart').fadeTo(200,1);
+      
+        // If item is backordered yet can still be ordered, we'll show special message.
+        if (variant.inventory_management && variant.inventory_quantity <= 0) {
+          $('#selected-variant').html({{ product.title | json }}{% unless hide_default_title %} + ' - ' + variant.title{% endunless %});
+          $('#backorder').removeClass("hidden");
+        } else {
+          $('#backorder').addClass("hidden");
+        }
+        
       } else {
-        jQuery('#backorder').addClass("hidden");
+        // Variant is sold out.
+        $('#backorder').addClass('hidden');
+        $('#add').val('Sold Out').addClass('disabled').attr('disabled', 'disabled').fadeTo(200,0.5);        
       }
       
+      // Whether the variant is in stock or not, we can update the price and compare at price.
+      if ( variant.compare_at_price > variant.price ) {
+        $('#price').html('<span class="price sale-price">'+ Shopify.formatMoney(variant.price, "{{ shop.money_format }}") +'</span>'+'&nbsp;<s class="product-compare-price">'+Shopify.formatMoney(variant.compare_at_price, "{{ shop.money_format }}")+ '</s>');
+      } else {
+        $('#price').html('<span class="price">'+ Shopify.formatMoney(variant.price, "{{ shop.money_format }}") + '</span>' );
+      }        
+
     } else {
-      // Variant is sold out.
-      jQuery('#backorder').addClass('hidden');
-      jQuery('#add').val('Sold Out').addClass('disabled').attr('disabled', 'disabled').fadeTo(200,0.5);        
+      // variant doesn't exist.
+      $('#backorder').addClass('hidden');
+      $('#add').val('Unavailable').addClass('disabled').attr('disabled', 'disabled').fadeTo(200,0.5);
     }
-    
-    // Whether the variant is in stock or not, we can update the price and compare at price.
-    if ( variant.compare_at_price > variant.price ) {
-      jQuery('#product-price').html('<span class="product-price on-sale">'+ Shopify.formatMoney(variant.price, "{{ shop.money_format }}") +'</span>'+'&nbsp;<s class="product-compare-price">'+Shopify.formatMoney(variant.compare_at_price, "{{ shop.money_format }}")+ '</s>');
-    } else {
-      jQuery('#product-price').html('<span class="product-price">'+ Shopify.formatMoney(variant.price, "{{ shop.money_format }}") + '</span>' );
-    }        
 
-  } else {
-    // variant doesn't exist.
-    jQuery('#backorder').addClass('hidden');
-    jQuery('#add').val('Unavailable').addClass('disabled').attr('disabled', 'disabled').fadeTo(200,0.5);
-  }
-
-};
-  
-jQuery(function($) {
+  };
 
   new Shopify.OptionSelectors('product-select', { product: {{ product | json }}, onVariantSelected: selectCallback });
   
