--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -4,7 +4,7 @@ That search.liquid template is included in the current theme to make it easier f
 to customize your /search page.
 Whether you are using your own template for the search page or not,
 the {{ content_for_header }} tag in theme.liquid will always output the following on the /search page:
-<link rel="stylesheet" href="//cdn.shopify.com/s/global/search.css" type="text/css" />
+<link rel="stylesheet" href="/global/search.css" type="text/css" />
 So the /search page is always styled by a globally-hosted stylesheet called search.css.
 You may override and complement that CSS in your theme's stylesheet.
 We are using a div#searchresults below so that the styles defined in search.css get
@@ -12,61 +12,109 @@ applied to the elements on this page; the 'searchresults' id is used in the CSS
 selectors inside search.css.
 {% endcomment %}
 
-<div id="searchresults">
-  
-  <form action="/search" method="get" class="search-form" role="search">
-    <p>
-      <input type="text" name="q" value="{{ search.terms | escape }}" />
-      <input type="submit" value="Search store..." />
-    </p>
-  </form>
-  
-  {% comment %}
-  search.performed is false when accessing the /search page without a 'q' parameter set
-  in the URL. A shop-owner can link to the /search page from one of his link lists.
-  It is important to show a search form on that page if search.performed is false.
-  {% endcomment %}
-  
-  {% if search.performed %}
-    
-    {% paginate search.results by 10 %}
+<div class="large-12 columns">
+
+    <div class="row">
+        <form action="/search" method="get" class="search-form" role="search">
+            <div class="large-10 columns">
+                <input type="text" name="q" value="{{ search.terms | escape }}" />
+            </div>
+            <div class="large-2 columns">
+                <input class="small button" type="submit" value="Search store..." />
+            </div>
+        </form>
+    </div>
     
     {% comment %}
-    Common pitfall to avoid: search.results should never be accessed before the opening 
-    paginate tag. Move the opening and closing paginate tags to the very top and bottom of your
-    search.liquid template if you need to.
-    If you fail to do the above, the pagination of search results will be broken.
-    search.results_count is fine to access in or out of the paginate block.
+    search.performed is false when accessing the /search page without a 'q' parameter set
+    in the URL. A shop-owner can link to the /search page from one of his link lists.
+    It is important to show a search form on that page if search.performed is false.
     {% endcomment %}
-  
-    {% if search.results_count == 0 %}  
-    <p>Your search for "{{ search.terms }}" did not yield any results.</p>              
-    {% else %}
-    <ol>
-      {% for item in search.results %}      
-      <li class="clearfix">
-        <h3>{{ item.title | link_to: item.url }}</h3>
-        {% if item.featured_image %}
-        <div class="result-image">
-          <a href="{{ item.url }}" title="{{ item.title | escape }}">
-            {{ item.featured_image.src | product_img_url: 'small' | img_tag: item.featured_image.alt }}
-          </a>
-        </div>
-        {% endif %}
-        <span>{{ item.content | strip_html | truncatewords: 40 | highlight: search.terms }}</span>        
-      </li>
-      {% endfor %}
-    </ol>
-    {% endif %}    
     
-    {% if paginate.pages > 1 %}
-    <div id="pagination">
-      {{ paginate | default_pagination }}
-    </div>
+    {% if search.performed %}
+    
+        {% paginate search.results by 10 %}
+    
+        {% comment %}
+        Common pitfall to avoid: search.results should never be accessed before the opening 
+        paginate tag. Move the opening and closing paginate tags to the very top and bottom of your
+        search.liquid template if you need to.
+        If you fail to do the above, the pagination of search results will be broken.
+        search.results_count is fine to access in or out of the paginate block.
+        {% endcomment %}
+    
+            <div style="clear:both;"></div>
+          
+            {% if search.results_count == 0 %}
+               <div class="row">
+                  <div class="large-12 columns">
+                      <p>Your search for "{{ search.terms }}" did not yield any results.</p>              
+                      {% else %}
+                      <ol class="search-results">
+                          {% for item in search.results %}      
+                              <li class="clearfix">
+                                  <div class="row">
+                                      {% if item.featured_image %}
+                                      <div class="large-3 columns">
+                                          <div class="result-image">
+                                            <a href="{{ item.url }}" title="{{ item.title | escape }}">
+                                              {{ item.featured_image.src | product_img_url: 'large' | img_tag: item.featured_image.alt }}
+                                            </a>
+                                          </div>
+                                      </div>
+                                      <div class="large-9 columns">
+                                          <h3>{{ item.title | link_to: item.url }}</h3>
+                                          <span>{{ item.content | strip_html | truncatewords: 40 | highlight: search.terms }}</span>
+                                      </div>
+                                      {% else %}
+                                      <div class="large-12 columns">
+                                          <h3>{{ item.title | link_to: item.url }}</h3>
+                                          <span>{{ item.content | strip_html | truncatewords: 40 | highlight: search.terms }}</span>
+                                      </div>
+                                      {% endif %}                                
+                                  </div>
+                              </li>
+                          {% endfor %}
+                      </ol>
+                  </div>
+               </div>
+            {% endif %}
+            
+  			<!-- pagination -->
+            <div class="row">
+              
+                <div class="large-12 columns">
+                
+                    {% if paginate.pages > 1 %}
+                        <div class="pagination-centered">
+                            <ul class="pagination">
+                                <li class="arrow">
+                                    {% if paginate.previous %}
+                                        {{ paginate.previous.title | link_to: paginate.previous.url }}
+                                    {% endif %}
+                                </li>
+                                {% for part in paginate.parts %}
+                                    {% if part.is_link %}
+                                        <li>{{ part.title | link_to: part.url }}</li>
+                                    {% else %}
+                                        <li class="current"><a href>{{ part.title }}</a></li>
+                                    {% endif %}
+                                {% endfor %}
+                                <li class="arrow">
+                                    {% if paginate.next %}
+                                        {{ paginate.next.title | link_to: paginate.next.url }}
+                                    {% endif %}
+                                </li>
+                            </ul>
+                        </div>
+                    {% endif %}
+                  
+                </div>
+              
+            </div>
+        
+        {% endpaginate %}
+        
     {% endif %}
-    
-    {% endpaginate %}    
-    
-  {% endif %}  
 
 </div>
