removing unecessary files

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -9,5 +9,6 @@ https://github.com/sugarskull/shopify-impact-theme
 // Import Foundation and Foundation Icons
 @import "base";
 @import "settings";
+@import "normalize";
 @import "app";
 @import "foundation-icons";
